--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,4 +13,5 @@
 @import "./components/custom-checkbox";
 @import "./components/product";
 @import "./components/product-view-modal";
-@import "./components/cart"
+@import "./components/cart";
+@import "./components/contact";
